# seisly

./: .coverage-thresholds.json  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  GEMINI.md  GITHUB_ACTIONS_FIX.md  GITHUB_ISSUES_IMPORT_GUIDE.md  GITIGNORE_SETUP.md  Gemfile  PRODUCTION_READINESS.md  PUSH_TO_GITHUB.md  QWEN.md  README.md  SECURITY.md  WINDOWS_TARGET_FIX.md  _config.yml  dist-workspace.toml  index.md
.beads/: .beads.md
.beads/context/: execution-state.md  project-context.md
.cargo/: config.toml
.gemini-kit/: guidelines.md  product.md  tech-stack.md
.github/: PROJECT_BOARD_SETUP.md
.github/workflows/: auto-generate-docs.yml  ci-cd.yml  ci.yml  deploy-docs.yml  deploy-pages.yml  release.yml  rust-clippy.yml
.mcp/: cursor-everything-stdio.json  cursor-github.json  gemini-cli-everything-stdio.json  gemini-cli-github.json  global-gemini-cli-config.json  global-qwen-code-config.json  qwen-code-everything-stdio.json  qwen-code-github.json
.metaswarm/: project-profile.json
.metaswarm/knowledge/: session-learnings.jsonl
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.1-MILESTONE-AUDIT.md  v1.3-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: missing-dlltool-resolved.md
.planning/phases/: phase-2-integration-02-features-PLAN.md  v1.3-q1-segy-optimization-PLAN.md  v1.3-seismic-visualization-PLAN.md
.planning/phases/13-seismic-visualization/: v1.3-01-PLAN.md  v1.3-01-SUMMARY.md  v1.3-02-PLAN.md  (+14 more)
.planning/reports/: 20260409-session-report.md  progress-2026-03-28-updated.md  progress-2026-03-28.md
agents/: architect.md  cto.md  designer.md  phase-researcher.md  plan-checker.md  planner.md  product-manager.md  security-design.md
crates/seisly_4d/: Cargo.toml
crates/seisly_ai/: requirements.txt  server.py
crates/seisly_app/: Cargo.toml  build.rs
crates/seisly_app/src/: ai_client.rs  app.rs  diagnostics.rs  main.rs  project.rs  ui_styles.rs
crates/seisly_app/src/interpretation/: history.rs  mod.rs
crates/seisly_app/src/ui/: layout.rs  mod.rs  shortcuts.rs  style.rs
crates/seisly_app/src/widgets/: crossplot.rs  fault_properties_panel.rs  horizon_properties_panel.rs  mod.rs  plugin_panel.rs  qi_panel.rs  settings_panel.rs  synthetic_data.rs  time_lapse_panel.rs  velocity_panel.rs  viewport.rs  well_panel.rs
crates/seisly_app/wix/: main.wxs
crates/seisly_attributes/: Cargo.toml
crates/seisly_attributes_gpu/: Cargo.toml
crates/seisly_attributes_gpu/benches/: gpu_benchmark.rs
crates/seisly_attributes_gpu/src/: compute.rs
crates/seisly_attributes_gpu/src/shaders/: attribute.wgsl
crates/seisly_cli/: Cargo.toml
crates/seisly_cli/src/: main.rs
crates/seisly_cli/src/commands/: import.rs  init.rs  list.rs  mod.rs
crates/seisly_cli/wix/: main.wxs
crates/seisly_compute/: Cargo.toml
crates/seisly_compute/src/: clipping.rs  interpolation.rs  lib.rs  resampling.rs  seismic.rs  synthetic.rs  throw.rs  tracking.rs  triangulation.rs  velocity.rs  volumetrics.rs  well_tie.rs
crates/seisly_compute/tests/: well_tie_integration_test.rs  well_tie_test.rs
crates/seisly_core/: Cargo.toml
crates/seisly_crs/: Cargo.toml
crates/seisly_fwi/: Cargo.toml
crates/seisly_io/: Cargo.toml
crates/seisly_ml_deep/: Cargo.toml
crates/seisly_ml_deep/src/: fault_detection.rs  lib.rs  training_dl.rs  unet.rs
crates/seisly_plugin/: Cargo.toml
crates/seisly_plugin/src/: api.rs  bridge.rs  interpreter.rs  ipc.rs  lib.rs  manager.rs  manifest.rs  python.rs  python_plugin.rs
crates/seisly_plugin/tests/: discovery_test.rs  plugin_isolation_test.rs  plugin_test.rs  python_plugin_test.rs  shm_test.rs
crates/seisly_production/: Cargo.toml
crates/seisly_production/src/: ccus.rs  lib.rs  surveillance.rs  well_planning.rs
crates/seisly_py_worker/: Cargo.toml
crates/seisly_py_worker/src/: main.rs  shm.rs
crates/seisly_qi/: Cargo.toml
crates/seisly_qi/src/: avo.rs  elastic.rs  fluid.rs  lib.rs
crates/seisly_qi/tests/: qi_integration_test.rs
crates/seisly_tracking/: Cargo.toml
crates/seisly_tracking/src/: fault_guided.rs  lib.rs  multi_horizon.rs  quality.rs
crates/sf_app/: Cargo.toml
crates/sf_app/src/: ai_client.rs  app.rs  main.rs  project.rs  ui_styles.rs
crates/sf_app/src/interpretation/: history.rs  mod.rs  velocity.rs  wells.rs
crates/sf_app/src/widgets/: fault_properties_panel.rs  horizon_properties_panel.rs  mod.rs  settings_panel.rs  synthetic_data.rs  velocity_panel.rs  viewport.rs  well_panel.rs
crates/sf_compute/: Cargo.toml
crates/sf_compute/src/: clipping.rs  interpolation.rs  lib.rs  resampling.rs  synthetic.rs  throw.rs  tracking.rs  triangulation.rs  velocity.rs  volumetrics.rs  well_tie.rs
crates/sf_compute/tests/: well_tie_integration_test.rs
crates/sf_io/: Cargo.toml
crates/sf_io/src/: lib.rs
crates/sf_io/src/csv/: mod.rs  trajectory.rs
crates/sf_io/src/export/: json.rs  mod.rs  xyz.rs
crates/sf_io/src/las/: mod.rs  parser.rs  writer.rs
crates/sf_io/src/segy/: mod.rs  parser.rs  reader.rs  writer.rs
crates/sf_io/src/xyz/: surface.rs
crates/sf_io/tests/: las_v3_test.rs  segy_writer_test.rs
crates/sf_ml/: Cargo.toml
crates/sf_ml/src/: lib.rs  synthetic.rs  tracker.rs  training.rs
crates/sf_ml/tests/: auto_track_test.rs  tracker_integration_test.rs
crates/sf_render/: Cargo.toml
crates/sf_storage/: Cargo.toml
crates/sf_storage/src/: lib.rs  project.rs
crates/sf_storage/src/blob/: mod.rs
crates/sf_storage/src/sqlite/: mod.rs
docs/: GITHUB_MCP_INSTALL.md  GLOBAL_MCP_INSTALL.md  MCP_TEST_RESULTS.md  architecture.md  blueprint.md  project_format.md  roadmap.md  ui-redesign-spec.md  well_seismic_tie.md
docs/plans/: opentect-parity-roadmap-design.md
docs/user-manual/: book.toml
examples/sample_wells/: surface1.xyz  well1.las  well1_traj.csv
plugins/mock_horizon/: main.py  manifest.yaml
schemas/sqlite/: 0001_init.sql
scripts/: design-review.sh  generate-docs.py  generate_docs.sh
skills/: seismic-throw-analysis.md
(+194 files in other folders)
