[workspace]
resolver = "2"
members = [
  "crates/seisly_core",
  "crates/seisly_crs",
  "crates/seisly_storage",
  "crates/seisly_io",
  "crates/seisly_compute",
  "crates/seisly_render",
  "crates/seisly_cli",
  "crates/seisly_app",
  "crates/seisly_ml",
  "crates/seisly_plugin",
  "crates/seisly_attributes",
  "crates/seisly_attributes_gpu",
  "crates/seisly_qi",
  "crates/seisly_4d",
  "crates/seisly_ml_deep",
  "crates/seisly_fwi",
  "crates/seisly_tracking",
  "crates/seisly_production",
  "crates/seisly_py_worker",
  # Note: seisly_ai is Python-only (AI server), not a Rust crate
]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ajamj/seisly"

[workspace.dependencies]
# Seisly Workspace Members
seisly_core = { path = "crates/seisly_core" }
seisly_crs = { path = "crates/seisly_crs" }
seisly_storage = { path = "crates/seisly_storage" }
seisly_io = { path = "crates/seisly_io" }
seisly_compute = { path = "crates/seisly_compute" }
seisly_render = { path = "crates/seisly_render" }
seisly_cli = { path = "crates/seisly_cli" }
seisly_app = { path = "crates/seisly_app" }
seisly_ml = { path = "crates/seisly_ml" }
seisly_plugin = { path = "crates/seisly_plugin" }
seisly_attributes = { path = "crates/seisly_attributes" }
seisly_attributes_gpu = { path = "crates/seisly_attributes_gpu" }
seisly_qi = { path = "crates/seisly_qi" }
seisly_4d = { path = "crates/seisly_4d" }
seisly_ml_deep = { path = "crates/seisly_ml_deep" }
seisly_fwi = { path = "crates/seisly_fwi" }
seisly_tracking = { path = "crates/seisly_tracking" }
seisly_production = { path = "crates/seisly_production" }
seisly_py_worker = { path = "crates/seisly_py_worker" }
seisly_ai = { path = "crates/seisly_ai" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Utilities
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Hashing
blake3 = "1.5"

# CRS
proj = "0.31"

# Compute
rayon = "1.8"
spade = "2.4"
nalgebra = "0.32"
ndarray = "0.16"

# Async
tokio = { version = "1.35", features = ["full"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Desktop (for seisly_app)
egui = "0.29"
eframe = "0.29"
wgpu = "22.1"
winit = "0.30"

# Server (for seisly_server)
axum = "0.7"
tower = "0.4"
utoipa = { version = "4.2", features = ["axum_extras"] }
tonic = "0.11"
prost = "0.12"
tonic-build = "0.11"

# Testing
tempfile = "3.9"

# SEG-Y I/O
giga-segy-in = "0.5"
giga-segy-out = "0.5"

# ML
rand = "0.8"
rand_distr = "0.4"
candle-core = "0.3"
candle-nn = "0.3"
half = "=2.4.0"

# Python integration
pyo3 = { version = "0.22.6", features = ["extension-module", "serde"] }
numpy = "0.22.1"
