[package]
name = "seisly_app"
version.workspace = true
edition.workspace = true

[[bin]]
name = "seisly-app"
path = "src/main.rs"

[dependencies]
seisly_core.workspace = true
seisly_storage.workspace = true
seisly_io.workspace = true
seisly_compute.workspace = true
seisly_render.workspace = true
seisly_plugin = { workspace = true, features = ["python"] }
eframe = { workspace = true, features = ["wgpu"] }
egui = { workspace = true, features = ["persistence"] }
egui_extras = { version = "0.29", features = ["svg", "all_loaders"] }
egui_dock = { version = "0.14", features = ["serde"] }
winit.workspace = true
anyhow.workspace = true
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tempfile.workspace = true
sentry = { version = "0.34", default-features = false, features = ["backtrace", "contexts", "panic", "native-tls", "transport"] }
rfd = "0.15"

[features]
python = ["seisly_plugin/python"]

[build-dependencies]
tonic-build.workspace = true
