[package]
name = "seisly_app"
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
description = "Seisly Desktop - High-performance 3D seismic interpretation workstation with interactive visualization"

[package.metadata.wix]
upgrade-guid = "9867F5A6-B15B-4598-89D4-7061DA0A6A5E"
path-guid = "7D9BAA60-E2D3-40FA-B011-62310F039C36"
license = false
eula = false

[[bin]]
name = "seisly-app"
path = "src/main.rs"

[dependencies]
seisly_core.workspace = true
seisly_storage.workspace = true
seisly_io.workspace = true
seisly_compute.workspace = true
seisly_render.workspace = true
seisly_plugin = { workspace = true }
eframe = { workspace = true, features = ["wgpu"] }
egui = { workspace = true, features = ["persistence"] }
egui_extras = { version = "0.29", features = ["svg", "all_loaders"] }
egui_dock = { version = "0.14", features = ["serde"] }
egui_plot = "0.29"
winit.workspace = true
anyhow.workspace = true
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tempfile.workspace = true
lazy_static = "1.4"
chrono = { workspace = true }
log = { workspace = true }
sentry = { version = "0.34", default-features = false, features = ["backtrace", "contexts", "panic", "native-tls", "transport"] }
rfd = "0.15"

[features]
# No default features

[build-dependencies]
tonic-build.workspace = true
