[package]
name = "sf_compute"
version.workspace = true
edition.workspace = true

[dependencies]
sf_core.workspace = true
sf_io.workspace = true
spade.workspace = true
thiserror.workspace = true
nalgebra.workspace = true
uuid.workspace = true
rand = "0.8"

[dev-dependencies]
tempfile.workspace = true
