[package]
name = "seisly_ml_deep"
version.workspace = true
edition.workspace = true
description = "Deep Learning for StrataForge - U-Net Auto-Tracking"

[dependencies]
seisly_core.workspace = true
seisly_compute.workspace = true
seisly_ml.workspace = true
candle-core.workspace = true
candle-nn.workspace = true
candle-transformers = "0.3"
rand = "0.8"
