[package]
name = "seisly_plugin"
version.workspace = true
edition.workspace = true
description = "Plugin system for Seisly"

[dependencies]
seisly_core.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde_json.workspace = true
serde.workspace = true
serde_yaml.workspace = true
ndarray.workspace = true
pyo3 = { workspace = true, optional = true }
numpy = { workspace = true, optional = true }
bytemuck.workspace = true
log.workspace = true
sysinfo.workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
python = ["pyo3", "numpy"]
