[package]
name = "seisly_qi"
version.workspace = true
edition.workspace = true
description = "Quantitative Interpretation & AVO Analysis for StrataForge"

[dependencies]
seisly_core.workspace = true
seisly_compute.workspace = true
seisly_attributes.workspace = true
nalgebra.workspace = true
rayon = "1.8"
