[package]
name = "seisly_tracking"
version.workspace = true
edition.workspace = true
description = "Enhanced Auto-Tracking for StrataForge"

[dependencies]
seisly_core.workspace = true
seisly_compute.workspace = true
seisly_ml.workspace = true
seisly_ml_deep.workspace = true
nalgebra.workspace = true
rayon = "1.8"
