[package]
name = "sf_app"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sf-app"
path = "src/main.rs"

[dependencies]
sf_core.workspace = true
sf_storage.workspace = true
sf_io.workspace = true
sf_compute.workspace = true
sf_render.workspace = true
eframe = { workspace = true, features = ["wgpu"] }
egui.workspace = true
egui_extras = { version = "0.26", features = ["svg"] }
wgpu.workspace = true
winit.workspace = true
anyhow.workspace = true
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[build-dependencies]
tonic-build.workspace = true
